<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
android:paddingBottom="@dimen/activity_vertical_margin"
android:paddingLeft="@dimen/activity_horizontal_margin"
android:paddingRight="@dimen/activity_horizontal_margin"
android:paddingTop="@dimen/activity_vertical_margin"
tools:context=".ManageActivity">

<TextView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/adresse"
    android:id="@+id/textView"
    android:layout_marginTop="33dp"
    android:layout_below="@+id/prenom"
    android:layout_alignParentStart="true" />

<EditText
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:inputType="numberSigned"
    android:ems="10"
    android:id="@+id/numeroPorte"
    android:layout_below="@+id/textView"
    android:layout_alignParentStart="true"
    android:layout_toStartOf="@+id/rue"
    android:layout_alignEnd="@+id/codePostal"
    android:hint="@string/n" />

<EditText
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:id="@+id/rue"
    android:layout_alignTop="@+id/numeroPorte"
    android:layout_alignParentEnd="true"
    android:layout_toEndOf="@+id/telephoneTx"
    android:layout_marginStart="40dp"
    android:hint="@string/rue" />

<EditText
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:inputType="numberSigned"
    android:ems="10"
    android:id="@+id/codePostal"
    android:layout_below="@+id/numeroPorte"
    android:layout_alignParentStart="true"
    android:layout_toStartOf="@+id/ville"
    android:hint="@string/code_postal" />

<EditText
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:id="@+id/ville"
    android:layout_below="@+id/rue"
    android:layout_alignStart="@+id/rue"
    android:layout_alignEnd="@+id/rue"
    android:hint="@string/ville" />

<TextView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/t_l_phone"
    android:id="@+id/telephoneTx"
    android:layout_alignParentStart="true"
    android:layout_alignTop="@+id/btnAjouterNumero"
    android:layout_marginTop="27dp"
    android:layout_alignBottom="@+id/btnAjouterNumero" />

<Button
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/ajouter_un_numro"
    android:id="@+id/btnAjouterNumero"
    android:layout_centerVertical="true"
    android:layout_alignEnd="@+id/ville" />

<LinearLayout
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/linearLayoutTelephone"
    android:layout_alignParentEnd="true"
    android:layout_below="@+id/btnAjouterNumero"
    android:layout_alignRight="@+id/ville"
    android:layout_alignParentBottom="true"
    android:layout_marginBottom="69dp">

</LinearLayout>

<EditText
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:id="@+id/prenom"
    android:layout_alignParentTop="true"
    android:layout_alignParentStart="true"
    android:layout_toStartOf="@+id/btnAjouterNumero"
    android:hint="@string/pr_nom" />

<EditText
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:id="@+id/nom"
    android:layout_alignParentTop="true"
    android:layout_alignEnd="@+id/rue"
    android:layout_toEndOf="@+id/numeroPorte"
    android:hint="@string/nom"
    android:layout_alignStart="@+id/btnAjouterNumero" />

<Button
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/valider"
    android:id="@+id/btnValider"
    android:layout_gravity="right"
    android:layout_alignParentBottom="true"
    android:layout_alignParentEnd="true" />

</RelativeLayout>
